<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_title">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="library_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_email">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email_address">mufuts@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="search_hint">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error_title">Проблемы со связью</string>
    <string name="connection_error_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry_button">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>