<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_screen"
    android:paddingRight="@dimen/padding_screen"
    android:theme="@style/Theme.PlaylistMaker">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="14dp"
        android:background="@android:color/transparent"
        app:title="@string/app_title"
        app:titleTextAppearance="@style/TitleToolbarStyle"
        app:titleTextColor="?attr/colorOnSecondary" />

    <Button
        android:id="@+id/searchButton"
        style="@style/ButtonStyle"
        android:layout_marginTop="40dp"
        android:text="@string/search_button"
        app:icon="@drawable/ic_search_24" />

    <Button
        android:id="@+id/libraryButton"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_between_buttons"
        android:text="@string/library_button"
        app:icon="@drawable/ic_media_24" />

    <Button
        android:id="@+id/settingsButton"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/margin_between_buttons"
        android:layout_marginBottom="28dp"
        android:text="@string/settings_button"
        app:icon="@drawable/ic_settings_24" />

</LinearLayout>
