<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@drawable/ic_back_arrow_24"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:title="@string/search_button"
        app:titleTextColor="?attr/colorOnPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search_background">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@null"
            android:drawableStart="@drawable/ic_search_24"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/colorSearchIcon"
            android:hint="@string/search_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_screen"
            android:singleLine="true"
            android:textColor="@color/yp_black"
            android:textColorHint="?attr/colorSearchIcon"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="14dp"
            android:src="@drawable/ic_clear_12"
            android:visibility="gone"
            app:tint="?attr/colorSearchIcon" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/historyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/historyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/history_title"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="19sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorOnSurface"
            android:fontFamily="@font/ys_display_medium"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            android:textColor="?attr/colorSurface"
            android:textSize="14sp"
            app:cornerRadius="54dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/emptyPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/PlaceholderImageStyle"
            android:src="@drawable/search_error" />

        <TextView
            style="@style/PlaceholderTitleStyle"
            android:text="@string/nothing_found" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            style="@style/PlaceholderImageStyle"
            android:src="@drawable/wifi_error" />

        <TextView
            style="@style/PlaceholderTitleStyle"
            android:text="@string/connection_error_title" />

        <TextView
            style="@style/PlaceholderTitleStyle"
            android:layout_width="312dp"
            android:text="@string/connection_error_message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="?attr/colorOnSurface"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/retry_button"
            android:textAllCaps="false"
            android:textColor="?attr/colorSurface"
            app:cornerRadius="54dp" />
    </LinearLayout>

</LinearLayout>
