<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.PlaylistMaker">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="28dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_arrow_24"
            app:navigationIconTint="?attr/colorOnPrimary" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coverImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:src="@drawable/placeholder" />

        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/coverImageView"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/trackNameTextView"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/bg_circle"
            android:backgroundTint="?attr/colorIconButtonBackground"
            android:src="@drawable/ic_add_to_playlist"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView"
            app:tint="?attr/colorOnPrimary" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/bg_circle"
            android:backgroundTint="?attr/colorIconButtonBackground"
            android:src="@drawable/ic_favorite"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView" />

        <TextView
            android:id="@+id/currentTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            tools:text="0:30" />

        <LinearLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/currentTimeTextView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:text="@string/duration"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/durationTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:gravity="end"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="13sp"
                    tools:text="5:35" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/albumLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:text="@string/album"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/albumTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/ys_display_regular"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="13sp"
                    tools:text="Yesterday (Remastered 2009)" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/yearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:text="@string/year"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/yearTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:gravity="end"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="13sp"
                    tools:text="1965" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:text="@string/genre"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/genreTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:gravity="end"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="13sp"
                    tools:text="Rock" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:text="@string/country"
                    android:textColor="?attr/colorControlNormal"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/countryTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/ys_display_regular"
                    android:gravity="end"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="13sp"
                    tools:text="Великобритания" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>